--- a/templates/shirt.html
+++ b/templates/shirt.html
@@ -38,6 +38,43 @@
                     <input type="submit" value="Add to Cart" name="submit">
                 </form>
 
+
+                <p>
+          
+                     Glancing about my attackers for the last time. Had it been worth it to allow myself to be captured to test if I could discover their identities? Seeing everything as I have done, being able to manipulate time and energy: it had been as gratifying as it had been exhausting. These attackers had followed me everywhere, until I became the prey in their eyes. <br><br>
+
+                    I haulted a few people while I escaped the exposure of gaze... haulted a man so I could take the other half of his sandwich, I was so hungry. They were minor incidents with no true victims. I didn't even take any money. It would have been wrong, and yet everyone I love began to distance themselves. They feared me and kept a wide distance from me. But then it started, I kept seeing shadow figures, off in the distance, just far enough that I couldn't halt them. Someone did their homework. I've had these powers for less than a month and they already know what I can and can't do.
+
+                    <br><br>
+
+                    I worked so hard to get closer, get them into range. A week I tried, but somehow I never prevailed. They were always just a few steps ahead of my range and somehow always had things I could hault right in between us so it slowed me down and not them. One time they even used the rain, I didn't think about it I had my radius extended it its maximum and chased them as long as I could. Then, when they bursted out the door into the rain, I was so close, and the rain haulted. I still have the cuts from the individual molecules refusing to move as I ran full speed into them. Finally, I changed tactics, I played defensive.
+                    <br><br>
+
+                    I kept my distance, pretended not to see them from the corner of my eye. Then today it worked they happened to show up as soon as I wasn't expecting them, proabably planned. I allowed myself to be captured and they promised to hide me away in the deepest, darkest vault. Alone. I've always been alone, this was no different. Then I felt it, a tingle in my neck, what was it? Everything went dark.
+                    <br><br>
+
+                   I woke up for a moment, shackled, they are way too tight. Where am I? I feel a bump... I'm in a van! Show time! I haulted everything I could reach with my powers, they don't seem as strong as normal, must be what they put in my neck. No matter, I only need to reach the tires, and I do! The van comes to a full stop, I don't. If I'm smart I can.. YES, I can fault the air just right so that slow me down so I dont die! I still hit hard, not enough to injure me, but my head is ringing.
+                   <br><br>
+
+                   I manage to stand, I look around. Holy shit, did they send an entire fleet for me? There are guns everywhere. They are all aimed at me. I make out a voice behind me. "What on Earth? How is this-- we hit you with enough to know out a horse!" Did I hault some of the syrum? 
+                   <br><br>
+
+                   The voice angers me, what have I done to deserve this? I would ask but still can't speak. "Get on your knees! You get down or we will all shoot! You can't stop all of our bullets!" On my knees? I'm shackled! Why would you shoot me? Why are you doing this!? Green lashes from myy core, the man screaming stands, perfectly still. He's apoplectic, face firery eyes looking like they might pop out with anger.
+                   <br><br>
+
+                   My shackles, their falling off. Did I hault the atoms? I didn't mean to. *CRACK!* A gun shot? I stop the bullet. Then another comes, and another. I was standing in the heart of the storm, more hellfire coming upon me than I could ever imagine, alone. 
+                   <br><br>
+
+                   I can't stop them all, I cant hold them forever. The bullets coming in hitting the bullets I've haulted are sending pains down my arm. What can I do? How do I escape? Why is it getting dark? Oh no, the rest of the syrum, I must have released it. I'm going down, this is it. 
+                   <br><br> 
+
+                   Huh?
+
+                   <br><br>
+
+                   What's with this emerald light? It's everywhere, I hear screams... I can't... Stay... Awake...
+
+                  </p>
                 <p class="note-designer">* All shirts are designed by Mike the Frog.</p>
 
             </div>
