--- a/templates/support.html
+++ b/templates/support.html
@@ -21,9 +21,6 @@
       .relative.-mt-12.lg\:-mt-24 {
       display: contents;
     }
-      p {
-        padding: 5px;
-      }
 
     </style>
   </head>
@@ -78,14 +75,14 @@
         <div class="flex flex-col w-full md:w-2/5 justify-center items-start text-center md:text-left">
           <p class="uppercase tracking-loose w-full"></p>
           <h1 class="my-4 text-5xl font-bold leading-tight">
-            Enter whatever you would like to oobify!
+            Show your support!
           </h1>
-          <form action="/results" method="post">
-            <p>Phrase to Oobify:</p>
-            <p><input type="text" name="nm" /></p>
-            <p><input type=submit value="submit" /></p>
-            <!-- <p>{{ parsed_phrase }}</p> -->
-          </form>
+          <p>This site was made by Chris Batey as a way to practice web building and design.</p>
+          <br/>
+          <a href="https://www.tiktok.com/@partundo">follow me on Tiktok @Partundo</a>
+        <br/>
+        <p>Tips are not requested, but appreciated.</p>
+        <a href="https://cash.app/$cbat971">Donte on Cashapp at $cbat971</a>
           <!-- <button class="mx-auto lg:mx-0 hover:underline bg-white text-gray-800 font-bold rounded-full my-6 py-4 px-8 shadow-lg focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out">
             Stay Informed
           </button> -->
