--- a/templates/results.html
+++ b/templates/results.html
@@ -18,6 +18,13 @@
       .gradient {
         background: linear-gradient(90deg, #0ee3ff 0%, #289c19 100%);
       }
+      .relative.-mt-12.lg\:-mt-24 {
+      display: contents;
+    }
+    p {
+  padding: 5px;
+}
+
     </style>
   </head>
   <body class="leading-normal tracking-normal text-black gradient" style="font-family: 'Source Sans Pro', sans-serif;">
@@ -25,7 +32,7 @@
     <nav id="header" class="fixed w-full z-30 top-0 text-black">
       <div class="w-full container mx-auto flex flex-wrap items-center justify-between mt-0 py-2">
         <div class="pl-4 flex items-center">
-          <a class="toggleColour text-black no-underline hover:no-underline font-bold text-2xl lg:text-4xl display: flex" href="#">
+          <a class="toggleColour text-black no-underline hover:no-underline font-bold text-2xl lg:text-4xl display: flex" href="/">
             <!--Icon from: http://www.potlabicons.com/ -->
             <div class="h-8 fill-current inline" >
               <!-- <img src="/static/img/logo.svg" width="45" height="45"> -->
@@ -58,7 +65,7 @@
             class="mx-auto lg:mx-0 hover:underline bg-white text-gray-800 font-bold rounded-full mt-4 lg:mt-0 py-4 px-8 shadow opacity-75 focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out"
             
           >
-          <a href="#Show_Support">Show Support!</a>
+          <a href="/ShowSupport">Show Support!</a>
           </button>
         </div>
       </div>
@@ -76,7 +83,8 @@
           <form action="/results" method="post">
             <p>Phrase to Oobify:</p>
             <p><input type="text" name="nm" /></p>
-            <p><input type=submit value="submit" /></p>
+            <p class=submit><input type=submit value="submit" /></p>
+            <br/>
             <p>{{ parsed_phrase }}</p>
           </form>
           <!-- <button class="mx-auto lg:mx-0 hover:underline bg-white text-gray-800 font-bold rounded-full my-6 py-4 px-8 shadow-lg focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out">
@@ -145,8 +153,6 @@
       </button> -->
     </section>
     <!--Footer-->
-    <footer class="bg-white">
-      <div class="container mx-auto px-8">
         <!-- <div class="w-full flex flex-col md:flex-row py-6">
           <div class="flex-1 mb-6 text-black">
             <a class="text-pink-600 no-underline hover:no-underline font-bold text-2xl lg:text-4xl" href="#">
@@ -173,6 +179,7 @@
               <li class="mt-2 inline-block mr-2 md:block md:mr-0">
                 <a href="#" class="no-underline hover:underline text-gray-800 hover:text-pink-500">Support</a>
               </li>
+              
             </ul>
           </div>
           <div class="flex-1">
